test/error/MethodOverrideNotFound.ci
abstract class Base
{
}

class Derived : Base
{
	public override void Foo() //ERROR: No method to override
	{
	}
}
